# 42_call_me_maybe

./: Makefile  README.md  main.py  pyproject.toml
src/: __main__.py  constants.py  llm_utils.py  misc.py  prompts.py  validation.py
tester/: ft1.json  ft2.json  ft3.json  ft5.json  result.json  run_test.py
