[project]
name = "42-call-me-maybe"
version = "0.1.0"
description = "gtourdia's call_me_maybe project (school 42)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.llm_utils"
ignore_errors = true

[[tool.mypy.overrides]]
module = "uvcache.*"
ignore_errors = true
